--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,5 +1,5 @@
 @import "colors" //интегрируем переменные с цветами
-@import "fontello" //иконки с fontello
+
 
 /*Specification*/
 
@@ -12,7 +12,7 @@ p, h1, h5
 	margin: 0
 
 body
- font-family: 'Open Sans', sans-serif
+ font-family: 'Lato', sans-serif
  font-size: 16px
  font-weight: 400
  color: $body-text
@@ -20,6 +20,61 @@ body
 input
  outline: none
  border-top: 0
+.buy-power
+	background-color: $bg-main
+.sidebar
+	width: 285px
+	//margin-left: -30px
+	&-logo
+		display: flex
+		align-items: center
+		height: 90px
+		border-radius: 0
+		background-color: #1e252b
+		&__text
+			margin-left: 12px
+	&-menu
+		background-color: #2b343b
+		width: 285px
+		li
+			height: 70px
+			position: relative
+			//width: 315px
+			&::before
+				//margin-left: -30px
+				content: ''
+				bottom: 0
+				left: 0
+				position: absolute
+				width: 6px
+				height: 100%
+				//background-color: red
+				background-image: linear-gradient(to bottom, #f0314b 0%, #f65c4a 100%);
+				//transition: 0.2s
+				transform: scaleX(0)
+			&:hover:before
+				height: 100%
+				right: 0
+				transform: scaleX(1)
+			&:hover
+				background-color: #283137
+			a
+				margin-left: 30px
+				display: block
+				width: 100%
+				height: 100%
+				font-size: 12px
+				font-weight: 700
+				color: $body-text
+				line-height: 19px
+				text-decoration: none
+				text-transform: uppercase
+				line-height: 70px
+				&:hover
+					color: #ef495f
+					//border-left: 6px
+					//background-image: linear-gradient(to bottom, #f0314b 0%, #f65c4a 100%);
+ 
 
 
 
@@ -46,10 +101,3 @@ input
 
 
 
-
-
-
-
-
-
-@import "media" //интегрируем медиа запросы
