--- a/app/sass/_colors.sass
+++ b/app/sass/_colors.sass
@@ -1,5 +1,7 @@
 $body-text: #fff //текст меню
 $bg-main: #2b343b //основной фон
+$border-main: #202930 //основная рамка
+$bg-power: #242c32 //фон секции power
 
 
 
