--- a/app/sass/main.css
+++ b/app/sass/main.css
@@ -1,28 +1,89 @@
-/*Specification*/
+@charset "UTF-8";
 ul {
   padding: 0;
   margin: 0;
   list-style: none;
 }
 
-p, h1, h5 {
+p, h1, h2, h5 {
   margin: 0;
 }
 
 body {
   font-family: 'Lato', sans-serif;
   font-size: 16px;
-  font-weight: 400;
+  font-weight: 700;
   color: #fff;
 }
 
 input {
   outline: none;
-  border-top: 0;
+  border: 0;
+}
+
+input[type="text"] {
+  padding-left: 16px;
+  width: 255px;
+  height: 60px;
+  border-radius: 6px;
+  border: 2px solid border-main;
+  background-color: #36434c;
+  color: #fff;
+  font-size: 24px;
+}
+
+.slider {
+  margin-left: 65px;
+  width: 635px;
+  height: 8px;
+  border-radius: 4px;
+  background-image: linear-gradient(-167.44deg, #fb61e2 0%, #fba361 100%);
+  -webkit-appearance: none;
+  -moz-appearance: none;
+       appearance: none;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  -webkit-transition: opacity .2s;
+  transition: opacity .2s;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+/*ползунок*/
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  background-color: #fca36a;
+  cursor: pointer;
+}
+
+.btn-continue {
+  width: 255px;
+  height: 50px;
+  border-radius: 8px;
+  border: 2px solid #cf2f2a;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#f45c49), to(#eb3349));
+  background-image: linear-gradient(to bottom, #f45c49 0%, #eb3349 100%);
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 1.81px;
+  font-weight: 700;
+}
+
+/*Specification*/
+.container {
+  max-width: 1170px;
 }
 
 .buy-power {
   background-color: #2b343b;
+  /*Левая сторона*/
 }
 
 .sidebar {
@@ -85,9 +146,7 @@ input {
   width: 100%;
   height: 100%;
   font-size: 12px;
-  font-weight: 700;
   color: #fff;
-  line-height: 19px;
   text-decoration: none;
   text-transform: uppercase;
   line-height: 70px;
@@ -95,5 +154,256 @@ input {
 
 .sidebar-menu li a:hover {
   color: #ef495f;
+}
+
+/*Правая сторона*/
+.page-power {
+  background-color: #242c32;
+}
+
+.page-power-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.page-power-header__title {
+  margin: 45px 236px 22px 30px;
+  text-transform: uppercase;
+  font-size: 24px;
+  font-weight: 700;
+  letter-spacing: 2.9px;
+}
+
+.page-power-header__btn {
+  margin-top: 30px;
+  padding: 13px 22px;
+  width: 220px;
+  height: 40px;
+  border-radius: 6px;
+  border: 2px solid #202930;
+  background-color: #36434c;
+  font-size: 14px;
+  letter-spacing: 1.69px;
+  line-height: 13px;
+}
+
+.page-power-header__exit {
+  margin-top: 38px;
+}
+
+.page-power-header__exit a {
+  margin-left: 14px;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #808080;
+  font-size: 12px;
+  font-weight: 700;
+  letter-spacing: 1.45px;
+  line-height: 19px;
+}
+
+.page-power-body {
+  width: 825px;
+  height: 660px;
+  border-radius: 6px;
+  border: 1px solid #202930;
+  background-color: #2b343b;
+}
+
+.page-power-body-title {
+  margin: 33px 0 0 29px;
+}
+
+.page-power-body-title h2 {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 28px;
+  text-transform: uppercase;
+  letter-spacing: 2.18px;
+}
+
+.page-power-body-wrap {
+  margin-left: 30px;
+  width: 765px;
+  height: 460px;
+  border-radius: 6px;
+  border: 1px solid #202930;
+  background-color: #2b343b;
+}
+
+.page-power-body-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.page-power-body-row__text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 62px;
+  width: 445px;
+  border: 1px solid #202930;
+  border-top: 0;
+  border-left: 0;
+}
+
+.page-power-body-row__text p {
+  margin-left: 20px;
+  font-size: 16px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 2.74px;
+}
+
+.page-power-body-row__text img {
+  margin-left: 18px;
+  width: 14px;
+  height: 14px;
+}
+
+.page-power-body-row__volume {
+  border-bottom: 1px solid #202930;
+  width: 319px;
+  height: 62px;
+}
+
+.page-power-body-row__volume p {
+  margin-left: 30px;
+  color: #14cb55;
+  font-family: "Lato-Black";
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 62px;
+  text-transform: uppercase;
+  letter-spacing: 3.1px;
+}
+
+.page-power-body-row__convertation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-bottom: 1px solid #202930;
+  width: 765px;
+  height: 62px;
+}
+
+.page-power-body-row__convertation-oval {
+  margin-left: 20px;
+  height: 8px;
+}
+
+.page-power-body-row__convertation p {
+  margin-left: 12px;
+  color: #bbbbbb;
+  font-size: 14px;
+  font-weight: 700;
+  letter-spacing: 2.39px;
+}
+
+.page-power-body-row__convertation-info {
+  margin-left: 18px;
+  width: 14px;
+  height: 14px;
+}
+
+.page-power-body-row__panel {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+}
+
+.page-power-body-row__panel-power {
+  margin-left: 66px;
+  position: relative;
+}
+
+.page-power-body-row__panel-power:before {
+  content: 'Rh';
+  bottom: 12px;
+  right: 12px;
+  text-transform: uppercase;
+  position: absolute;
+  color: #808080;
+  font-size: 24px;
+  letter-spacing: 4.1px;
+}
+
+.page-power-body-row__panel-power label {
+  margin-top: 25px;
+  display: block;
+  font-size: 18px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 3.08px;
+}
+
+.page-power-body-row__panel-symbol {
+  margin-left: 62px;
+  position: absolute;
+  top: 75px;
+  left: 310px;
+}
+
+.page-power-body-row__panel-cost {
+  margin-left: 125px;
+  position: relative;
+}
+
+.page-power-body-row__panel-cost:before {
+  content: '$';
+  bottom: 12px;
+  right: 16px;
+  text-transform: uppercase;
+  position: absolute;
+  color: #808080;
+  font-size: 24px;
+}
+
+.page-power-body-row__panel-cost label {
+  margin-top: 25px;
+  display: block;
+  font-size: 18px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 3.08px;
+}
+
+.page-power-body-row__slider {
+  margin-top: 62px;
+}
+
+.page-power-body-row__btn {
+  margin: 49px 255px 40px;
+}
+
+.page-power-footer {
+  text-align: center;
+}
+
+.page-power-footer__text {
+  margin-top: 22px;
+  text-transform: uppercase;
+  letter-spacing: 2.39px;
+  color: #aaaaaa;
+}
+
+.page-power-footer__icon {
+  width: 296px;
+  margin: 29px 0 0 265px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 /*# sourceMappingURL=main.css.map */
