--- a/app/sass/_interface.sass
+++ b/app/sass/_interface.sass
@@ -1,16 +1,23 @@
-ul
-	padding: 0
-	margin: 0
-	list-style: none
-
-p, h1, h2, h5
-	margin: 0
-
+*
+ box-sizing: border-box 
 body
  font-family: 'Lato', sans-serif
  font-size: 16px
  font-weight: 700
  color: $body-text
+ text-transform: uppercase
+
+ul
+	padding: 0
+	margin: 0
+	list-style: none
+a
+ color: $body-text
+ &:hover
+  text-decoration: none
+
+p, h1, h2
+	margin: 0
 
 input
  outline: none
@@ -25,6 +32,9 @@ input[type="text"]
  background-color: #36434c
 	color: $body-text
 	font-size: 24px
+
+.container
+	max-width: 1170px
 
 .slider 
 	margin-left: 65px
