--- a/app/sass/main.css
+++ b/app/sass/main.css
@@ -1,12 +1,7 @@
 @charset "UTF-8";
-ul {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
-p, h1, h2, h5 {
-  margin: 0;
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
@@ -14,6 +9,25 @@ body {
   font-size: 16px;
   font-weight: 700;
   color: #fff;
+  text-transform: uppercase;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+a {
+  color: #fff;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+p, h1, h2 {
+  margin: 0;
 }
 
 input {
@@ -30,6 +44,10 @@ input[type="text"] {
   background-color: #36434c;
   color: #fff;
   font-size: 24px;
+}
+
+.container {
+  max-width: 1170px;
 }
 
 .slider {
@@ -76,18 +94,15 @@ input[type="text"] {
   font-weight: 700;
 }
 
-/*Specification*/
-.container {
-  max-width: 1170px;
-}
-
 .buy-power {
-  background-color: #2b343b;
+  background-color: #242c32;
   /*Левая сторона*/
 }
 
 .sidebar {
-  width: 285px;
+  width: 277px;
+  height: 1020px;
+  margin-left: -15px;
 }
 
 .sidebar-logo {
@@ -108,7 +123,7 @@ input[type="text"] {
 
 .sidebar-menu {
   background-color: #2b343b;
-  width: 285px;
+  width: 277px;
 }
 
 .sidebar-menu li {
@@ -125,6 +140,8 @@ input[type="text"] {
   height: 100%;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#f0314b), to(#f65c4a));
   background-image: linear-gradient(to bottom, #f0314b 0%, #f65c4a 100%);
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
   -webkit-transform: scaleX(0);
           transform: scaleX(0);
 }
@@ -141,14 +158,11 @@ input[type="text"] {
 }
 
 .sidebar-menu li a {
-  margin-left: 30px;
+  padding-left: 30px;
   display: block;
   width: 100%;
   height: 100%;
   font-size: 12px;
-  color: #fff;
-  text-decoration: none;
-  text-transform: uppercase;
   line-height: 70px;
 }
 
@@ -156,9 +170,19 @@ input[type="text"] {
   color: #ef495f;
 }
 
+.sidebar-social {
+  padding: 455px 0 28px;
+  background-color: #2b343b;
+}
+
+.sidebar-social a {
+  margin-left: 24px;
+}
+
 /*Правая сторона*/
 .page-power {
   background-color: #242c32;
+  height: 1020px;
 }
 
 .page-power-header {
@@ -168,8 +192,7 @@ input[type="text"] {
 }
 
 .page-power-header__title {
-  margin: 45px 236px 22px 30px;
-  text-transform: uppercase;
+  margin: 45px 213px 22px 30px;
   font-size: 24px;
   font-weight: 700;
   letter-spacing: 2.9px;
@@ -194,8 +217,6 @@ input[type="text"] {
 
 .page-power-header__exit a {
   margin-left: 14px;
-  text-decoration: none;
-  text-transform: uppercase;
   color: #808080;
   font-size: 12px;
   font-weight: 700;
@@ -212,14 +233,13 @@ input[type="text"] {
 }
 
 .page-power-body-title {
-  margin: 33px 0 0 29px;
+  margin: 33px 0 21px 29px;
 }
 
 .page-power-body-title h2 {
   font-size: 18px;
   font-weight: 700;
   line-height: 28px;
-  text-transform: uppercase;
   letter-spacing: 2.18px;
 }
 
@@ -256,7 +276,6 @@ input[type="text"] {
   margin-left: 20px;
   font-size: 16px;
   font-weight: 700;
-  text-transform: uppercase;
   letter-spacing: 2.74px;
 }
 
@@ -279,7 +298,6 @@ input[type="text"] {
   font-size: 24px;
   font-weight: 400;
   line-height: 62px;
-  text-transform: uppercase;
   letter-spacing: 3.1px;
 }
 
@@ -330,11 +348,22 @@ input[type="text"] {
   content: 'Rh';
   bottom: 12px;
   right: 12px;
-  text-transform: uppercase;
   position: absolute;
   color: #808080;
   font-size: 24px;
   letter-spacing: 4.1px;
+}
+
+.page-power-body-row__panel-power:after {
+  content: '500 Gh/s';
+  bottom: -30px;
+  right: 0px;
+  position: absolute;
+  color: #bbbbbb;
+  font-weight: 700;
+  font-size: 14px;
+  letter-spacing: 2.39px;
+  text-transform: none;
 }
 
 .page-power-body-row__panel-power label {
@@ -342,7 +371,6 @@ input[type="text"] {
   display: block;
   font-size: 18px;
   font-weight: 700;
-  text-transform: uppercase;
   letter-spacing: 3.08px;
 }
 
@@ -362,7 +390,6 @@ input[type="text"] {
   content: '$';
   bottom: 12px;
   right: 16px;
-  text-transform: uppercase;
   position: absolute;
   color: #808080;
   font-size: 24px;
@@ -373,7 +400,6 @@ input[type="text"] {
   display: block;
   font-size: 18px;
   font-weight: 700;
-  text-transform: uppercase;
   letter-spacing: 3.08px;
 }
 
@@ -390,20 +416,27 @@ input[type="text"] {
 }
 
 .page-power-footer__text {
-  margin-top: 22px;
-  text-transform: uppercase;
+  margin-top: 15px;
   letter-spacing: 2.39px;
   color: #aaaaaa;
 }
 
 .page-power-footer__icon {
   width: 296px;
-  margin: 29px 0 0 265px;
+  margin: 20px 0 0 265px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+.page-power-copy {
+  margin: 32px 0 206px;
+  color: #aaaaaa;
+  text-align: center;
+  font-size: 14px;
+  letter-spacing: 2.39px;
 }
 /*# sourceMappingURL=main.css.map */
