--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -2,21 +2,14 @@
 @import "interface" 
 
 
-/*Specification*/
-
-
-
-
-.container
-	max-width: 1170px
-
 .buy-power
-	background-color: $bg-main
+	background-color: $bg-power
 
 	/*Левая сторона*/
 .sidebar
-	width: 285px
-	//margin-left: -30px
+	width: 277px
+	height: 1020px
+	margin-left: -15px
 	&-logo
 		display: flex
 		align-items: center
@@ -26,23 +19,22 @@
 		&__text
 			margin-left: 12px
 	&-menu
-		background-color: #2b343b
-		width: 285px
+		background-color: $bg-main
+		width: 277px
 		li
 			height: 70px
 			position: relative
 			//width: 315px
 			&::before
-				//margin-left: -30px
+				//margin-left: -24px
 				content: ''
 				bottom: 0
 				left: 0
 				position: absolute
 				width: 6px
 				height: 100%
-				//background-color: red
 				background-image: linear-gradient(to bottom, #f0314b 0%, #f65c4a 100%);
-				//transition: 0.2s
+				transition: 0.2s
 				transform: scaleX(0)
 			&:hover:before
 				height: 100%
@@ -51,26 +43,28 @@
 			&:hover
 				background-color: #283137
 			a
-				margin-left: 30px
+				padding-left: 30px
 				display: block
 				width: 100%
 				height: 100%
 				font-size: 12px
-				color: $body-text
-				text-decoration: none
-				text-transform: uppercase
 				line-height: 70px
 				&:hover
 					color: #ef495f
+	&-social
+		padding: 455px 0 28px
+  background-color: $bg-main
+		a
+			margin-left: 24px
 
 /*Правая сторона*/
 .page-power
 	background-color: $bg-power
+	height: 1020px
 	&-header
 		display: flex
 		&__title
-			margin: 45px 236px 22px 30px
-			text-transform: uppercase
+			margin: 45px 213px 22px 30px
 			font-size: 24px
 			font-weight: 700
 			letter-spacing: 2.9px
@@ -89,8 +83,6 @@
 			margin-top: 38px
 			a
 				margin-left: 14px
-				text-decoration: none
-				text-transform: uppercase
 		  color: #808080
 				font-size: 12px
 				font-weight: 700
@@ -103,12 +95,11 @@
 		border: 1px solid $border-main
 		background-color: $bg-main
 		&-title
-			margin: 33px 0 0 29px
+			margin: 33px 0 21px 29px
 			h2
 				font-size: 18px
 				font-weight: 700
 				line-height: 28px
-				text-transform: uppercase
 				letter-spacing: 2.18px
 		&-wrap
 			margin-left: 30px
@@ -133,8 +124,6 @@
 					margin-left: 20px
 					font-size: 16px
 					font-weight: 700
-					//line-height: 26px
-					text-transform: uppercase
 					letter-spacing: 2.74px
 				img
 					margin-left: 18px
@@ -151,12 +140,10 @@
 					font-size: 24px
 					font-weight: 400
 					line-height: 62px
-					text-transform: uppercase
 					letter-spacing: 3.1px
 			&__convertation
 				display: flex
 				align-items: center
-				
 				border-bottom: 1px solid $border-main
 				width: 765px
 				height: 62px
@@ -184,17 +171,25 @@
 						content: 'Rh'
 						bottom: 12px
 						right: 12px
-						text-transform: uppercase
 						position: absolute
 						color: #808080
 						font-size: 24px
 						letter-spacing: 4.1px
+					&:after
+						content: '500 Gh/s'
+						bottom: -30px
+						right: 0px
+						position: absolute
+						color: #bbbbbb
+						font-weight: 700
+						font-size: 14px
+						letter-spacing: 2.39px
+						text-transform: none
 				 label
 						margin-top: 25px
 						display: block
 						font-size: 18px
 						font-weight: 700
-						text-transform: uppercase
 						letter-spacing: 3.08px
 					input
 						//width: 255px
@@ -211,7 +206,6 @@
 						content: '$'
 						bottom: 12px
 						right: 16px
-						text-transform: uppercase
 						position: absolute
 						color: #808080
 						font-size: 24px
@@ -220,7 +214,6 @@
 						display: block
 						font-size: 18px
 						font-weight: 700
-						text-transform: uppercase
 						letter-spacing: 3.08px
    &__slider
 				margin-top: 62px
@@ -230,15 +223,21 @@
 	&-footer
 		text-align: center
 		&__text
-			margin-top: 22px
-			text-transform: uppercase
+			margin-top: 15px
 			letter-spacing: 2.39px
 			color: #aaaaaa
   &__icon
 			width: 296px
-			margin: 29px 0 0 265px
+			margin: 20px 0 0 265px
 			display: flex
 			justify-content: space-between
+ &-copy
+		//padding: 32px 0 206px
+		margin: 32px 0 206px
+		color: #aaaaaa
+		text-align: center
+		font-size: 14px
+		letter-spacing: 2.39px
 
 
 
