made a slider like in a psd

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -216,7 +216,8 @@
 						font-weight: 700
 						letter-spacing: 3.08px
    &__slider
-				margin-top: 62px
+				margin: 62px auto
+				width: 635px
 			&__btn
 				margin: 49px 255px 40px
 				
