--- a/app/sass/_interface.sass
+++ b/app/sass/_interface.sass
@@ -37,31 +37,60 @@ input[type="text"]
 	max-width: 1170px
 
 .slider 
-	margin-left: 65px
-	width: 635px
-	height: 8px
-	border-radius: 4px
- background-image: linear-gradient(-167.44deg, #fb61e2 0%, #fba361 100%)
-	-webkit-appearance: none
-	appearance: none
-	outline: none
-	opacity: 0.7
-	-webkit-transition: .2s
-	transition: opacity .2s
+	//margin-left: 65px
+	//width: 635px
+	//height: 8px
+	//border-radius: 4px
+ //background-image: linear-gradient(-167.44deg, #fb61e2 0%, #fba361 100%)
+	//-webkit-appearance: none
+	//appearance: none
+	//outline: none
+	//opacity: 0.7
+	//-webkit-transition: .2s
+	//transition: opacity .2s
 	&:hover
-	 opacity: 1
+	 //opacity: 1
 
- 
 /*ползунок*/
 .slider::-webkit-slider-thumb 
- -webkit-appearance: none
- appearance: none
- width: 28px
- height: 28px
-	border-radius: 50%
- background-color: #fca36a
- cursor: pointer
+ //-webkit-appearance: none
+ //appearance: none
+ //width: 28px
+ //height: 28px
+	//border-radius: 50%
+ //background-color: #fca36a
+ //cursor: pointer
 
+/*Переопределяем стили Powerange*/
+/*полоса слайдера*/
+.range-bar
+	height: 8px
+	background-color: #e2e6eb
+	border-radius: 4px
+/*полоса перед ползунком*/
+.range-quantity
+	background-image: linear-gradient(-167.44deg, #fb61e2 0%, #fba361 100%)
+ border-radius: 0
+	border-top-left-radius: 4px
+	border-bottom-left-radius: 4px
+	
+/*ползунок*/
+.range-handle
+ width: 44px
+ height: 44px
+	border-radius: 50%
+ //background-color: #fca36a
+ //background-color: #fff
+	box-shadow: 0 0 10px #fca36a
+	top: -16px
+	cursor: pointer
+	background-image: url('../img/thumb.png')
+	background-position: 50% 50%
+
+
+
+
+	/*Кнопка продолжить*/
 .btn-continue
 	width: 255px
 	height: 50px
