--- a/app/sass/main.css
+++ b/app/sass/main.css
@@ -50,35 +50,35 @@ input[type="text"] {
   max-width: 1170px;
 }
 
-.slider {
-  margin-left: 65px;
-  width: 635px;
+/*ползунок*/
+/*Переопределяем стили Powerange*/
+/*полоса слайдера*/
+.range-bar {
   height: 8px;
+  background-color: #e2e6eb;
   border-radius: 4px;
-  background-image: linear-gradient(-167.44deg, #fb61e2 0%, #fba361 100%);
-  -webkit-appearance: none;
-  -moz-appearance: none;
-       appearance: none;
-  outline: none;
-  opacity: 0.7;
-  -webkit-transition: .2s;
-  -webkit-transition: opacity .2s;
-  transition: opacity .2s;
 }
 
-.slider:hover {
-  opacity: 1;
+/*полоса перед ползунком*/
+.range-quantity {
+  background-image: linear-gradient(-167.44deg, #fb61e2 0%, #fba361 100%);
+  border-radius: 0;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
 }
 
 /*ползунок*/
-.slider::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 28px;
-  height: 28px;
+.range-handle {
+  width: 44px;
+  height: 44px;
   border-radius: 50%;
-  background-color: #fca36a;
+  -webkit-box-shadow: 0 0 10px #fca36a;
+          box-shadow: 0 0 10px #fca36a;
+  top: -16px;
   cursor: pointer;
+  background-image: url("../img/thumb.png");
+  background-position: 50% 50%;
+  /*Кнопка продолжить*/
 }
 
 .btn-continue {
@@ -404,7 +404,8 @@ input[type="text"] {
 }
 
 .page-power-body-row__slider {
-  margin-top: 62px;
+  margin: 62px auto;
+  width: 635px;
 }
 
 .page-power-body-row__btn {
